--- a/patterned-edit-text/build.gradle
+++ b/patterned-edit-text/build.gradle
@@ -3,14 +3,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.+'
-        classpath 'org.robolectric:robolectric-gradle-plugin:0.11.+'
-        classpath 'com.github.dcendents:android-maven-plugin:1.0'
+        classpath 'com.android.tools.build:gradle:1.1.0'
+        classpath 'org.robolectric:robolectric-gradle-plugin:1.0.1'
+        classpath 'com.github.dcendents:android-maven-plugin:1.2'
     }
 }
 
-apply plugin: 'android-library'
-apply plugin: 'robolectric'
+apply plugin: 'com.android.library'
+apply plugin: 'org.robolectric'
 
 repositories {
     mavenCentral()
@@ -28,8 +28,8 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+            minifyEnabled false
+            proguardFiles 'proguard-rules.txt'
         }
     }
 
