--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: android
 
 android:
   components:
-    - build-tools-23.1.1
+    - tools
+    - build-tools-23.0.3
     - android-23
 
 script:
-    ./gradlew build
+    - ./gradlew build
