--- a/patterned-edit-text/build.gradle
+++ b/patterned-edit-text/build.gradle
@@ -3,12 +3,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.github.dcendents:android-maven-plugin:1.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     }
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'robolectric'
+//apply plugin: 'idea'
 
 repositories {
     mavenCentral()
@@ -16,7 +16,7 @@ repositories {
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '19.1.0'
+    buildToolsVersion '23.0.3'
 
     defaultConfig {
         minSdkVersion 8
@@ -40,38 +40,17 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile 'org.hamcrest:hamcrest-core:1.1'
-    androidTestCompile 'org.hamcrest:hamcrest-library:1.1'
-    androidTestCompile('junit:junit:4.11') {
-        exclude module: 'hamcrest-core'
-    }
-    androidTestCompile('org.robolectric:robolectric:2.4') {
-        exclude module: 'classworlds'
-        exclude module: 'commons-logging'
-        exclude module: 'httpclient'
-        exclude module: 'maven-artifact'
-        exclude module: 'maven-artifact-manager'
-        exclude module: 'maven-error-diagnostics'
-        exclude module: 'maven-model'
-        exclude module: 'maven-project'
-        exclude module: 'maven-settings'
-        exclude module: 'plexus-container-default'
-        exclude module: 'plexus-interpolation'
-        exclude module: 'plexus-utils'
-        exclude module: 'wagon-file'
-        exclude module: 'wagon-http-lightweight'
-        exclude module: 'wagon-provider-api'
-    }
-    androidTestCompile 'org.mockito:mockito-core:1.9.5'
-}
+    androidTestCompile 'org.hamcrest:hamcrest-core:1.3'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 
-apply plugin: 'idea'
-idea {
-    module {
-        testOutputDir = file('build/test-classes/debug')
-    }
-}
+    androidTestCompile 'com.android.support.test:runner:0.4.1'
+    androidTestCompile 'com.android.support.test:rules:0.4.1'
+    androidTestCompile "com.android.support:support-annotations:23.3.0"
 
-apply plugin: 'android-maven'
+    testCompile 'junit:junit:4.12'
+    testCompile('org.robolectric:robolectric:3.0')
+
+}
+apply plugin: 'com.github.dcendents.android-maven'
 version = "1.0"
 group = "com.faradaj"
