--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ android:
     - tools
     - build-tools-23.0.3
     - android-23
+    - extra-android-support
+    - extra-android-m2repository
+    - extra-google-m2repository
 
 script:
     - ./gradlew build
+
+
