--- a/patterned-edit-text/build.gradle
+++ b/patterned-edit-text/build.gradle
@@ -14,6 +14,13 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    travisBuild = System.getenv("TRAVIS") == "true"
+    // allows for -Dpre-dex=false to be set
+    preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+}
+
+
 android {
     compileSdkVersion 23
     buildToolsVersion '23.0.3'
@@ -36,7 +43,14 @@ android {
             setRoot('src/test')
         }
     }
+    dexOptions {
+        // Skip pre-dexing when running on Travis CI or when disabled via -Dpre-dex=false.
+        preDexLibraries = preDexEnabled && !travisBuild
+    }
+
 }
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -50,6 +64,10 @@ dependencies {
     testCompile('org.robolectric:robolectric:3.0')
 
 }
+
+
+
 apply plugin: 'com.github.dcendents.android-maven'
 version = "1.0"
 group = "com.faradaj"
+
