--- a/patterned-edit-text/build.gradle
+++ b/patterned-edit-text/build.gradle
@@ -37,6 +37,9 @@ android {
             proguardFiles 'proguard-rules.txt'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 
     sourceSets {
         androidTest {
