--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ android:
     - build-tools-23.0.3
     - android-23
     - extra-android-support
-
+    - extra-android-m2repository
 
 script:
     - ./gradlew build
